# FvwmPy

./: .gitignore  MANIFEST  README.md  TODO.md  setup.cfg  setup.py
examples/: FvwmOverview.py  FvwmTest.py
fvwmpy/: constants.py  exceptions.py  fvwmpy.py  log.py  packet.py  packet_queue.py  packet_reader.py  packets.py  picker.py
fvwmpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: FvwmTest.py  fvwmpygui.py  gui.py  test.py
src/fvwmpy/: __init__.py  constants.py  exceptions.py  fvwmpy.py  packets.py
