[metadata]
name = FvwmPy-rostislav-matveev
version = 0.0.1
author = Rostislav Matveev
author_email = rostislav.matveev@googlemail.com
description = Interface to write FVWM modules in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rostislav-matveev/FvwmPy
project_urls =
    Bug Tracker = https://github.com/rostislav-matveev/FvwmPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3
    Operating System :: linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src