[metadata]
name = fvwmpy
version = 1.1.0
author = Rostislav Matveev
author_email = rostislav.matveev@googlemail.com
description = Simple and flexible interface to develop FVWM modules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rostislav-matveev/FvwmPy
project_urls =
    Bug Tracker = https://github.com/rostislav-matveev/FvwmPy/issues
classifiers =
    Development Status :: 5 - Production/Stable 
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Topic :: Desktop Environment :: Window Managers :: FVWM

[options]
package_dir =
   fvwmpy = fvwmpy
packages = fvwmpy
python_requires = >=3.6

[options.packages.find]
description-file = README.md
